[package]
name = "unzip-bot"
version = "7.0.0"
edition = "2024"
description = "High-performance Telegram archive extraction bot"
license = "MIT"

[[bin]]
name = "unzip-bot"
path = "src/main.rs"

[dependencies]
# Telegram MTProto client
grammers-client = "0.9"
grammers-session = "0.9"
grammers-tl-types = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# HTTP client for URL downloads
reqwest = { version = "0.12", features = ["stream"] }

# MongoDB async driver
mongodb = "3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Image processing (thumbnail resize)
image = "0.25"

# System info (replaces psutil)
sysinfo = "0.34"

# Audio metadata (replaces mutagen)
lofty = "0.22"

# Utilities
chrono = "0.4"
regex = "1"
once_cell = "1"
anyhow = "1"
thiserror = "2"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
