[project]
name = "unzip-bot"
version = "7.3.0"
authors = [{ name = "EDM115", email = "unzip@edm115.dev" }]
description = "A Telegram bot to extract various types of archives"
dependencies = [
  "aiocron==2.1",
  "aiofiles==24.1.0",
  "aiohttp==3.12.15",
  "aiosqlite==0.21.0",
  "base58check==1.0.2",
  "GitPython==3.1.45",
  "Pillow==11.3.0",
  "psutil==7.0.0",
  "pymongo==4.15.0",
  "pyrofork==2.3.68",
  "PyTgCrypto==1.2.11",
  "unzip-http==0.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/EDM115/unzip-bot"
"Bug Tracker" = "https://github.com/EDM115/unzip-bot/issues"
"Funding" = "https://github.com/EDM115#support-me-"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
future-annotations = true
logger-objects = ["unzipbot.LOGGER"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv]
compile-bytecode = true
link-mode = "copy"

[tool.uv.pip]
compile-bytecode = true
generate-hashes = true
link-mode = "copy"
