[project]
name = "unzip-bot"
version = "7.3.0"
authors = [{ name = "EDM115", email = "unzip@edm115.dev" }]
description = "A Telegram bot to extract various types of archives"
dependencies = [
  "aiocron==2.1",
  "aiofiles==25.1.0",
  "aiohttp==3.13.3",
  "aiosqlite==0.22.1",
  "base58check==1.0.2",
  "GitPython==3.1.46",
  "Pillow==12.1.1",
  "psutil==7.2.2",
  "pymongo==4.16.0",
  "pyrofork==2.3.69",
  "tgcrypto-pyrofork==1.2.8",
  "unzip-http==0.7",
  "uvloop==0.22.1 ; platform_system != 'Windows'",
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/EDM115/unzip-bot"
"Bug Tracker" = "https://github.com/EDM115/unzip-bot/issues"
"Funding" = "https://github.com/EDM115#support-me-"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
skip-magic-trailing-comma = true

[tool.ruff.lint]
future-annotations = true
logger-objects = ["unzipbot.LOGGER"]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.uv]
compile-bytecode = true
link-mode = "copy"

[tool.uv.pip]
compile-bytecode = true
generate-hashes = true
link-mode = "copy"
